// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SettingsScreen-component should render correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "bottom",
        "left",
        "right",
        "top",
      ]
    }
    testID="SettingsScreen"
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={1}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      waitFor={
        Array [
          Object {
            "current": null,
          },
        ]
      }
    >
      <View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Account
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰍂
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Sign in
                  </Text>
                </View>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 20,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅂
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Display
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰃝
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Theme
                  </Text>
                </View>
                <RCTSwitch
                  accessibilityRole="switch"
                  onChange={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  onTintColor="#00b0ff"
                  style={
                    Array [
                      Object {
                        "height": 31,
                        "width": 51,
                      },
                      Object {
                        "marginRight": 0,
                        "marginVertical": 0,
                      },
                    ]
                  }
                  tintColor="rgba(0, 0, 0, 0.54)"
                  value={false}
                />
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Devices
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰂱
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Connect device
                  </Text>
                </View>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 20,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅂
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "backgroundColor": "#f6f6f6",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                      "expanded": true,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "padding": 8,
                        },
                        Array [
                          Object {
                            "backgroundColor": "#fff",
                          },
                          Object {
                            "paddingHorizontal": 0,
                            "paddingLeft": 8,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  <View
                    pointerEvents="none"
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <Text
                        collapsable={false}
                        nativeID="animatedComponent"
                        numberOfLines={1}
                        style={
                          Object {
                            "alignSelf": "flex-end",
                            "backgroundColor": "#00b0ff",
                            "borderRadius": 10,
                            "color": "#000000",
                            "fontFamily": "System",
                            "fontSize": 10,
                            "fontWeight": "400",
                            "height": 20,
                            "lineHeight": 10,
                            "minWidth": 20,
                            "opacity": 1,
                            "overflow": "hidden",
                            "paddingHorizontal": 4,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        0
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 8,
                          },
                          Object {
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "#000000",
                              "fontFamily": "System",
                              "fontWeight": "400",
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Array [
                              Object {
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#00b0ff",
                              },
                              Array [
                                Object {
                                  "color": "#000000",
                                },
                                undefined,
                              ],
                            ],
                          ]
                        }
                      >
                        Connected devices
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 8,
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(0, 0, 0, 0.87)",
                              "fontSize": 24,
                            },
                            Array [
                              Object {
                                "lineHeight": 24,
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰅃
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "paddingLeft": 64,
                    },
                    Array [
                      Object {
                        "paddingLeft": 12,
                      },
                    ],
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</View>
`;

exports[`Test SettingsScreen-component should render correctly when user is signed in 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaView
    edges={
      Array [
        "bottom",
        "left",
        "right",
        "top",
      ]
    }
    testID="SettingsScreen"
  >
    <RCTScrollView
      collapsable={false}
      handlerTag={2}
      handlerType="NativeViewGestureHandler"
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      style={
        Object {
          "marginTop": 10,
        }
      }
      waitFor={
        Array [
          Object {
            "current": null,
          },
        ]
      }
    >
      <View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Account
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰍂
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Sign in
                  </Text>
                </View>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 20,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅂
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Display
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰃝
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Theme
                  </Text>
                </View>
                <RCTSwitch
                  accessibilityRole="switch"
                  onChange={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  onTintColor="#00b0ff"
                  style={
                    Array [
                      Object {
                        "height": 31,
                        "width": 51,
                      },
                      Object {
                        "marginRight": 0,
                        "marginVertical": 0,
                      },
                    ]
                  }
                  tintColor="rgba(0, 0, 0, 0.54)"
                  value={false}
                />
              </View>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderRadius": 15,
              "margin": 10,
              "paddingHorizontal": 10,
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.24,
              "shadowRadius": 4,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "textAlign": "left",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "fontSize": 20,
                      "letterSpacing": 0.15,
                      "lineHeight": 30,
                      "marginVertical": 2,
                    },
                    Object {
                      "fontSize": 15,
                      "fontWeight": "700",
                      "paddingHorizontal": 10,
                      "paddingVertical": 5,
                    },
                  ],
                ],
              ]
            }
          >
            Devices
          </Text>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.12)",
                  "height": 0.5,
                },
                undefined,
                undefined,
              ]
            }
          />
          <View
            style={
              Array [
                Object {
                  "marginVertical": 8,
                },
                undefined,
              ]
            }
            theme={
              Object {
                "animation": Object {
                  "scale": 1,
                },
                "colors": Object {
                  "accent": "#03dac4",
                  "backdrop": "rgba(0, 0, 0, 0.5)",
                  "background": "#f6f6f6",
                  "border": "rgb(216, 216, 216)",
                  "card": "rgb(255, 255, 255)",
                  "disabled": "rgba(0, 0, 0, 0.26)",
                  "elevation": Object {
                    "elevation1": "#fff",
                  },
                  "error": "#B00020",
                  "muted": "rgba(0, 0, 0, 0.54)",
                  "notification": "#f50057",
                  "onSurface": "#000000",
                  "placeholder": "rgba(0, 0, 0, 0.54)",
                  "primary": "#00b0ff",
                  "status": Object {
                    "alert": "#ffd600",
                    "error": "#dd2c00",
                    "success": "#64dd17",
                  },
                  "surface": "#ffffff",
                  "text": "#000000",
                },
                "dark": false,
                "fonts": Object {
                  "light": Object {
                    "fontFamily": "System",
                    "fontWeight": "300",
                  },
                  "medium": Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  "regular": Object {
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                  "thin": Object {
                    "fontFamily": "System",
                    "fontWeight": "100",
                  },
                },
                "roundness": 15,
              }
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  false,
                  Array [
                    Object {
                      "padding": 8,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#00b0ff",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰂱
                </Text>
                <View
                  style={
                    Array [
                      Object {
                        "marginVertical": 6,
                        "paddingLeft": 8,
                      },
                      Object {
                        "flex": 1,
                        "justifyContent": "center",
                      },
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "System",
                          "fontWeight": "400",
                        },
                        Object {
                          "textAlign": "left",
                        },
                        Array [
                          Object {
                            "fontSize": 16,
                          },
                          Object {
                            "color": "rgba(0, 0, 0, 0.87)",
                          },
                          undefined,
                        ],
                      ]
                    }
                  >
                    Connect device
                  </Text>
                </View>
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "rgba(0, 0, 0, 0.54)",
                        "fontSize": 20,
                      },
                      Array [
                        Object {
                          "alignSelf": "center",
                        },
                        undefined,
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅂
                </Text>
              </View>
            </View>
            <View>
              <View
                style={
                  Object {
                    "backgroundColor": "#f6f6f6",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                      "expanded": true,
                    }
                  }
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "padding": 8,
                        },
                        Array [
                          Object {
                            "backgroundColor": "#fff",
                          },
                          Object {
                            "paddingHorizontal": 0,
                            "paddingLeft": 8,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  <View
                    pointerEvents="none"
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "height": 24,
                            "width": 24,
                          },
                          Object {
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <Text
                        collapsable={false}
                        nativeID="animatedComponent"
                        numberOfLines={1}
                        style={
                          Object {
                            "alignSelf": "flex-end",
                            "backgroundColor": "#00b0ff",
                            "borderRadius": 10,
                            "color": "#000000",
                            "fontFamily": "System",
                            "fontSize": 10,
                            "fontWeight": "400",
                            "height": 20,
                            "lineHeight": 10,
                            "minWidth": 20,
                            "opacity": 1,
                            "overflow": "hidden",
                            "paddingHorizontal": 4,
                            "textAlign": "center",
                            "textAlignVertical": "center",
                          }
                        }
                      >
                        0
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 8,
                          },
                          Object {
                            "flex": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "#000000",
                              "fontFamily": "System",
                              "fontWeight": "400",
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Array [
                              Object {
                                "fontSize": 16,
                              },
                              Object {
                                "color": "#00b0ff",
                              },
                              Array [
                                Object {
                                  "color": "#000000",
                                },
                                undefined,
                              ],
                            ],
                          ]
                        }
                      >
                        Connected devices
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 8,
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(0, 0, 0, 0.87)",
                              "fontSize": 24,
                            },
                            Array [
                              Object {
                                "lineHeight": 24,
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰅃
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "paddingLeft": 64,
                    },
                    Array [
                      Object {
                        "paddingLeft": 12,
                      },
                    ],
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </RNCSafeAreaView>
</View>
`;
